Fixed bottom margin on mobile playlists tables

--- a/src/app/content-block/content.block.component.scss
+++ b/src/app/content-block/content.block.component.scss
@@ -7,16 +7,15 @@
         position: fixed;
         left: 15vw;
         width: 85%;
-        height: 10vh;
+        height: 8vh;
         z-index: 1;
     }
 
     .background {
-        padding-top: 10vh;
+        padding-top: 8vh;
         height: 100%;
-        padding-bottom: 20vh;
+        margin-bottom: 30vh;
     }
-
 }
 
 @media only screen and (max-device-width: 780px) {
@@ -38,14 +37,12 @@
             position: fixed;
             left: 0;
             width: 100%;
-            height: 10vh;
+            height: 8h;
         }
 
-        // .background {
-        //     padding-top: 10vh;
-        //     // height: 100%;
-        //     padding-bottom: 20vh;
-        // }
+        .background {
+            margin-bottom: 30vh;
+        }
     }
 }
 
