--- a/src/app/content-pages/main/block/block.component.scss
+++ b/src/app/content-pages/main/block/block.component.scss
@@ -1,7 +1,7 @@
 .container {
     // display: inline-block;
-    font-size: 2vw;
-    color: white;
+    font-size: 1.25vw;
+    color: whitesmoke;
     margin-left: 3%;
     margin-top: 1%;
     width: 100%;
