--- a/src/app/content-pages/playlist/playlist.page.component.scss
+++ b/src/app/content-pages/playlist/playlist.page.component.scss
@@ -51,7 +51,8 @@
     }
 
     .list {
-        
+        width: 100%;
+        height: 100;
     }
 }
 
@@ -73,6 +74,10 @@
                 margin-top: 7%;
                 margin-left: 5%;
             }
+        }
+
+        .list {
+            padding-bottom: 30vh;
         }
     }
 }
