--- a/src/app/content-pages/playlist/table/playlist.table.component.scss
+++ b/src/app/content-pages/playlist/table/playlist.table.component.scss
@@ -7,6 +7,7 @@ div {
 
 .table {
     width: 100%;
+    height: 100%;
     background: rgba(0,0,0,0);
 
     border: none;
@@ -62,7 +63,7 @@ div {
 
     .mat-header-row {
         position: sticky;
-        top: 10vh;
+        top: 8vh;
         border: none;
 
         .mat-column-position {
@@ -185,7 +186,7 @@ div {
             p {
                 margin: 50%;
                 padding: 0;
-                font-size: 7vw;
+                font-size: 6vw;
                 text-align: center;
             }
         }
